[package]
name = "albedo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.171", features = ["derive"] }
serenity = "0.12.2"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1"
color-eyre = "0.6.3"
